retrieveNA31/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Core_Account_ID__c</fullName>
        <description>Account ID of the Contact. Used in dup check logic during task generation from the Campaign.</description>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account_Owner_ID__c</fullName>
        <formula>Contact.Account.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Assigned_To_User_ID__c</fullName>
        <description>Alternate user to which to assign the generated campaign tasks. Will override the default of account owner.</description>
        <label>Assigned To User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Last_Touch_Marketing_Activity__c</fullName>
        <description>Captured only via bulk upload. Otherwise read-only for all users.</description>
        <label>Last Touch Marketing Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>